Fix authorization security issue

--- a/SITE/src/main/resources/templates/staff_projects.html
+++ b/SITE/src/main/resources/templates/staff_projects.html
@@ -18,6 +18,13 @@
   </head>
   <body>
     <div class="container mt-4">
+      <div
+        th:if="${param.error != null}"
+        class="alert alert-danger"
+        role="alert"
+      >
+        <span th:text="${param.error}"></span>
+      </div>
       <header
         class="d-flex justify-content-between align-items-center p-3 header"
       >
